--- a/index.html
+++ b/index.html
@@ -22,7 +22,29 @@
             <button id="play" onclick="startGame()" class="btn btn-warning">PLAY</button>
             <br><br>
             <h3 id="status" class="btn btn-default"></h3> <br><br>
-            <div id="canvas"></div>
+            <div id="canvas"></div> <br><br>
+            <button class="btn btn-primary" id="restart" onclick="restart()">RESTART</button> <br><br>
+
+            <div id="myModal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button class="close" data-dismiss="modal">&times;</button>
+                            <h3>Instructions</h3>
+                        </div>
+                        <div class="modal-body">
+                            <ol>
+                                <li>First, keep your laptop straight.</li>
+                                <li>Move yourself approximately 3 to 4 feet away from the laptop.</li>
+                                <li>Move your right wrist in ascending and descending manner, a red dot should appear on your right wrist.</li>
+                                <li>Now press the play button, and again move yourself 3-4 feet away from laptop.</li>
+                                <li>The red paddle is your paddle, that will move as per the movement of your right wrist.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy-right-footer">Developed by - Pranjal</div>
         </center>
 
         <script src="main.js"></script>
